k8s/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: link-tree-deployment
  namespace: link-tree
spec:
  replicas: 1
  selector:
    matchLabels:
      app: link-tree
  template:
    metadata:
      labels:
        app: link-tree
    spec:
      containers:
        - name: link-tree
          image: gopal161/link-tree-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
