k8s/06_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: link-tree-service
  namespace: link-tree
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: link-tree
